button gap fixed

--- a/css/index.css
+++ b/css/index.css
@@ -134,10 +134,10 @@ font-family:arial;
   background-color: goldenrod;
   border: none;
   color: white;
-  padding: 1px 1px;
+  padding: 10px 10px;
   text-align: center;
-  font-size: px;
-  margin-top: 0;
+
+  margin-top: -800px;
   margin-left: 0;
  
   
